js/src/jit-test/tests/binast/invalid/param-index-duplicate.binjs
BINJS
[
GRAMMAR
]
identity
;
"
BindingIdentifier
>
AssertedPositionalParameterName
(
AssertedDeclaredName
AssertedParameterScope2AssertedScriptGlobalScope
AssertedVarScope0EagerFunctionDeclaration
FormalParameters0FunctionOrMethodContents
Script
[
STRINGS
]
identity
;
a
b
f
var
[
TREE
]
identity
;
T
